Update 2. Hello world 프로그램.md

--- a/1. C++ 개요/2. Hello world 프로그램.md
+++ b/1. C++ 개요/2. Hello world 프로그램.md
@@ -1,5 +1,11 @@
+# 2. Hello world 프로그램   
+   
+<br/>
+<br/>
 
-'''
+### - Hello world.cpp
+
+``` C++
 #include <iostream>
 using namespace std;
 
@@ -8,4 +14,22 @@ int main(){
 
     return 0;
 }
-'''
+```
+
+#### 지시자
+- include 전처리 지시자 : 라이브러리에 있는 코드를 가져와 헤더 파일에 저장
+- using namespace : 이름 공간에 대한 선언
+
+
+#### iostream 라이브러리
+
+iostream : 콘솔 입출력을 위해 필요한 라이브러리
+<br/>
+- cin (common input) : 콘솔 입력
+<br/>
+
+
+- cout (common output) : 콘솔 출력
+<br/>
+cout << "hello world"<br/>
+cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로 요청
