Update 2. Hello world 프로그램.md

--- a/1. C++ 개요/2. Hello world 프로그램.md
+++ b/1. C++ 개요/2. Hello world 프로그램.md
@@ -15,7 +15,8 @@ int main(){
     return 0;
 }
 ```
-
+<br/>
+<br/>
 #### 지시자
 - include 전처리 지시자 : 라이브러리에 있는 코드를 가져와 헤더 파일에 저장
 - using namespace : 이름 공간에 대한 선언
@@ -25,11 +26,46 @@ int main(){
 
 iostream : 콘솔 입출력을 위해 필요한 라이브러리
 <br/>
-- cin (common input) : 콘솔 입력
-<br/>
-
-
 - cout (common output) : 콘솔 출력
 <br/>
 cout << "hello world"<br/>
 cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로 요청
+<br/>
+표준 형식으로 반환하기 때문에 정수의 계산도 가능
+
+```C++
+
+    int m = 11;
+    int n = 20;
+
+    cout << "m : " << m << "\nn : " << n << "\naverage : " << (n + m) / 2 << endl;
+    
+```
+
+- result
+m = 11<br/>
+n = 20<br/>
+n + m = 15<br/>
+<br/>
+2로 나누면 자연수로 출력
+<br/>
+```C++
+
+    int m = 11;
+    int n = 20;
+
+    cout << "m : " << m << "\nn : " << n << "\naverage : " << (n + m) / 2.0 << endl;
+    
+```
+
+- result
+m = 11<br/>
+n = 20<br/>
+n + m = 15.5<br/>
+<br/>
+2.0으로 나누면 소수점 한자리의 정수로 출력
+<br/>
+
+<br/>
+- cin (common input) : 콘솔 입력
+<br/>
