--- a/1. C++ 개요/2. Hello world 프로그램.md
+++ b/1. C++ 개요/2. Hello world 프로그램.md
@@ -25,10 +25,11 @@ int main(){
 
 #### iostream 라이브러리
 
-iostream : 콘솔 입출력을 위해 필요한 라이브러리
-<br/>
-- cout (common output) : 콘솔 출력
-<br/>
+- iostream : 콘솔 입출력을 위해 필요한 라이브러리
+
+
+1.cout (common output) : 콘솔 출력
+
 cout << "hello world"<br/>
 cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로 요청
 <br/>
@@ -45,7 +46,8 @@ cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로
 ```
 
 <br/>
-- result
+
+- result<br/>
 m = 11<br/>
 n = 20<br/>
 n + m = 15<br/>
@@ -63,7 +65,8 @@ n + m = 15<br/>
 ```
 
 <br/>
-- result
+
+- result<br/>
 m = 11<br/>
 n = 20<br/>
 n + m = 15.5<br/>
@@ -72,5 +75,6 @@ n + m = 15.5<br/>
 <br/>
 
 <br/>
-- cin (common input) : 콘솔 입력
+
+2. cin (common input) : 콘솔 입력
 <br/>
