Update 2. Hello world 프로그램.md

--- a/1. C++ 개요/2. Hello world 프로그램.md
+++ b/1. C++ 개요/2. Hello world 프로그램.md
@@ -53,7 +53,7 @@ cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로
 m = 11<br/>
 n = 20<br/>
 n + m = 15<br/>
-2로 나누면 자연수로 출력
+(2로 나누면 자연수로 출력)
 <br/>
 <br/>
 <br/>
@@ -74,7 +74,7 @@ n + m = 15<br/>
 m = 11<br/>
 n = 20<br/>
 n + m = 15.5<br/>
-2.0으로 나누면 소수점 한자리의 정수로 출력
+(2.0으로 나누면 소수점 한자리의 정수로 출력)
 <br/>
 <br/>
 <br/>
