--- a/1. C++ 개요/2. Hello world 프로그램.md
+++ b/1. C++ 개요/2. Hello world 프로그램.md
@@ -32,7 +32,7 @@ int main(){
 
 <br/>
 cout << "hello world"<br/>
-cout (기본 출력) 에게 "hello world" 문자열의 출력을 << 연산자로 요청
+cout (기본 출력) 에게 "hello world" 문자열의 출력을 '<<' 연산자로 요청
 <br/>
 표준 형식으로 반환하기 때문에 정수의 계산도 가능
 <br/>
@@ -82,3 +82,27 @@ n + m = 15.5<br/>
 2. cin (common input) : 콘솔 입력
 
 <br/>
+
+공백 문자(스페이스, 탭) 무시하고 값을 입력 받는다<br/>
+'>>' 연신자를 사용해 입력 받은 값을 전달한다<br/>
+<br/>
+
+```C++
+#include <iostream>
+using namespace std;
+
+int main(){
+
+    int m, n;
+
+    cin >> m;
+    cin >> n;
+
+    cout << "m : " << m << "\nn : " << n << "\naverage : " << (n + m) / 2.0 << endl;
+
+    return 0;
+}
+```
+
+<br/>
+(m과 n을 입력받아 평균 값을 구하는 )
