Update 3. 네임 스페이스.md

--- a/1. C++ 개요/3. 네임 스페이스.md
+++ b/1. C++ 개요/3. 네임 스페이스.md
@@ -62,3 +62,30 @@ std:cout : Namespace std 안에 있는 cout 변수 사용<br/>
 <br/>
 
 #### 2. using 문 사용
+<br/>
+
+```C++
+using std::cout;
+```
+
+using 지시자가 명시한 네임스페이스의 모든 이름을 사용할 수 있게 했다면, using 선언은 단 하나의 이름만을 범위 지정 연산자를 사용하지 않고도 사용할 수 있게 해줍니다.<br/>
+또한, using 지시자와 마찬가지로 using 선언이 나타나는 선언 영역에서만 해당 이름을 사용할 수 있게 해줍니다.<br/>
+<br/>
+
+- namespace 안에 있는 특정 변수만 명시적으로 사용<br/>
+(cout, endl 만 사용) <br/>
+
+```C++
+
+#include <iostream>
+using std::cout;
+using std::endl;
+
+int main(){
+
+    cout << "Hello world" << endl;
+
+    return 0;
+}
+
+```
