Update 3. 네임 스페이스.md

--- a/1. C++ 개요/3. 네임 스페이스.md
+++ b/1. C++ 개요/3. 네임 스페이스.md
@@ -89,3 +89,58 @@ int main(){
 }
 
 ```
+
+<br/>
+
+#### 3. namespace 선언
+<br/>
+
+네임스페이스란 이름이 기억되는 영역을 뜻하며, 이름이 소속된 공간을 의미합니다.<br/>
+네임스페이스는 C++ 프로그램을 작성할 때 발생하는 이름에 대한 충돌을 방지해 주는 방법을 제공합니다.<br/>
+<br/>
+
+- 네임스페이스는 C언어에는 없는 C++ 만의 새로운 기능
+- 중복된 변수 명을 가진 구조체, 변수, 함수를 사용하게 될 경우 Namespace를 활용 할 수 있다.
+<br/>
+
+```C++
+
+#include <iostream>
+
+namespace A {
+    void y(void) {
+        std::cout << "A Namespace y" << std::endl;
+    }
+}
+
+namespace B {
+    void y(void) {
+        std::cout << "B Namespace y" << std::endl;
+    }
+}
+
+int foo(int x){
+    return x;
+}
+
+int main()
+{
+
+    int result = ::foo(8);
+    std::cout << result << std:: endl;
+    A::y();
+    B::y();
+
+    return 0;
+
+}
+
+```
+
+- result
+8<br/>
+A Namespace y<br/>
+B Namespace y<br/>
+
+
+
