Update 3. 네임 스페이스.md

--- a/1. C++ 개요/3. 네임 스페이스.md
+++ b/1. C++ 개요/3. 네임 스페이스.md
@@ -101,6 +101,7 @@ int main(){
 
 - 네임스페이스는 C언어에는 없는 C++ 만의 새로운 기능
 - 중복된 변수 명을 가진 구조체, 변수, 함수를 사용하게 될 경우 Namespace를 활용 할 수 있다.
+- 이름 충돌 방지를 위해 사용
 <br/>
 
 ```C++
