--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -3,3 +3,15 @@
 
 ### C++ 기본 데이터 타입
 <br/>
+
+데이터 타입(data type)은 해당 데이터가 메모리에 어떻게 저장되고, 프로그램에서 어떻게 처리되어야 하는지를 명시적으로 알려주는 역할을 합니다.<br/>
+C++에서는 여러 형태의 타입을 제공하고 있는데, 이것을 기본 타입이라고 합니다.<br/>
+이러한 기본 타입은 크게 정수형, 실수형, 문자형 그리고 bool형 타입으로 나눌 수 있습니다.<br/>
+
+#### 1. 정수형 타입
+<br/>
+소수가 없은 일반 수에 대한 데이터 타입<br/>
+<br/>
+|정수형 타입|설명|표현 범위|
+|--------|------------|-----------|
+|정수형 타입|설명|표현 범위|
