Update 4. 기본 데이터 타입.md

--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -15,4 +15,4 @@ C++에서는 여러 형태의 타입을 제공하고 있는데, 이것을 기본
 
 |정수형 타입|설명|표현 범위|
 |--------|------------|-----------|
-|정수형 타입|설명|표현 범위|
+|shrot|2바이트 크기의 정수|-2^15 ~ 2^15-1|
