Update 4. 기본 데이터 타입.md

--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -16,3 +16,29 @@ C++에서는 여러 형태의 타입을 제공하고 있는데, 이것을 기본
 |정수형 타입|설명|표현 범위|
 |--------|------------|-----------|
 |shrot|2바이트 크기의 정수|-2<sup>15</sup> ~ 2<sup>15</sup>-1|
+|unsigned shrot|2바이트 크기의 양의 정수|0 ~ 2<sup>16</sup>-1|
+|int|4바이트 크기의 정수 (컴파일러 별로 크기 다름)|-2<sup>31</sup> ~ 2<sup>31</sup>-1|
+|unsigned int|4바이트 크기의 양의 정수(컴파일러 별로 크기 다름)|0 ~ 2<sup>32</sup>-1|
+|long|4바이트 크기의 정수|-2<sup>31</sup> ~ 2<sup>31</sup>-1|
+|unsigned long|4바이트 크기의 양의 정수|0 ~ 2<sup>32</sup>-1|
+|long long|8바이트 크기의 정수|-2<sup>63</sup> ~ 2<sup>63</sup>-1|
+
+<br/>
+
+- int : 컴파일러 별로 크기가 다른 기본 정수형
+- long : 4바이트 고정 정수형
+
+<br/>
+
+정수형 데이터 타입은 사욯하고자 하는 데이터의 최대 크기를 고려<br/>
+타입이 표현할 수 있는 범위를 벗어난 경우 오버플로우(overflow) 발생<br/>
+
+#### 2. 실수형 타입
+<br/>
+소수부나 지수가 있는 수에 대한 데이터 타입<br/>
+정수형 보다 넓은 범위를 표현<br/>
+<br/>
+
+
+
+
