Update 4. 기본 데이터 타입.md

--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -33,12 +33,48 @@ C++에서는 여러 형태의 타입을 제공하고 있는데, 이것을 기본
 정수형 데이터 타입은 사욯하고자 하는 데이터의 최대 크기를 고려<br/>
 타입이 표현할 수 있는 범위를 벗어난 경우 오버플로우(overflow) 발생<br/>
 
+<br/>
+
 #### 2. 실수형 타입
 <br/>
 소수부나 지수가 있는 수에 대한 데이터 타입<br/>
 정수형 보다 넓은 범위를 표현<br/>
 <br/>
 
+|실수형 타입|설명|표현 범위|
+|--------|------------|-----------|
+|float|4바이트 크기의 실수(부동소수점)|3.4 * 10<sup>-38</sup> ~ 3.4 * 10<sup>38</sup>|
+|double|8바이트 크기의 실수|1.7 * 10<sup>-308</sup> ~ 1.7 * 10<sup>308</sup>|
+|long double|8바이트 크기의 실수|1.7 * 10<sup>-308</sup> ~ 1.7 * 10<sup>308</sup>|
 
+<br/>
 
+- float : 유효 자릿수 소수점 6자리
+- double : 유효 자릿수 소수점 16자리
 
+<br/>
+
+```c++
+int main() {
+
+    cout<<fixed;
+    cout.precision(16);
+
+    float num01 = 3.1415926535897932;  // float 타입의 유효 자릿수는 소수점 6자리
+    cout << " num01 (float) = " << num01 << endl;  
+
+    double num02 = 3.1415926535897932; // double 타입의 유효 자릿수는 소수점 16자리
+    cout << " num02 (double) = " << num02 << endl;
+
+}
+```
+
+<br/>
+
+- 출력 결과
+
+num01 (float) = 3.1415927410125732<br/>
+num02 (double) = 3.1415926535897931<br/>
+
+<br/>
+float형의 경우 소수점 6자리 까지 저장되고, double형의 경우 소숫점 16자리 저장된다.<br/> 
