Update 4. 기본 데이터 타입.md

--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -78,3 +78,13 @@ num02 (double) = 3.1415926535897931<br/>
 
 <br/>
 float형의 경우 소수점 6자리 까지 저장되고, double형의 경우 소숫점 16자리 저장된다.<br/> 
+
+<br/>
+
+#### 3. 문자형 타입
+<br/>
+문자 하나를 표현할 수 있는 타입<br/>
+컴파일러는 2진수의 형태로 문자형 데이터 저장<br/>
+아스키코드 방식으로 영문 대소문자 저장<br/>
+<br/>
+
