Update 4. 기본 데이터 타입.md

--- a/1. C++ 개요/4. 기본 데이터 타입.md
+++ b/1. C++ 개요/4. 기본 데이터 타입.md
@@ -171,11 +171,42 @@ int main() {
 
 <br/>
 
+#### 6. decltype 키워드
 
+<br/>
+C++11에 새로 추가 된 키워드로 함수 처럼 사용한다.<br/>
+타입을 알고자 하는 식의 타입으로 치환<br/>
 
+<br/>
 
+```c++
+decltype(/* 타입을 알고자 하는 식*/)
+```
 
-#### 6. auto 키워드를 이용한 선언
+<br/>
 
+- 사용 예시
+
+<br/>
+
+```c++
+int main() {
+
+    int x = 6; 
+    decltype(x) y = 3;  // Type : int
+
+    cout << x/y << endl;  
+
+}
+```
+
+<br/>
+
+- 출력 결과
+
+2<br/>
+<br/>
+
+y는 decltype(x)에 의해 x와 동일한 타입인 int로 선언된다.
 
 
