--- a/1. C++ 개요/5. inline 함수.md
+++ b/1. C++ 개요/5. inline 함수.md
@@ -3,3 +3,148 @@
 
 ### inline 함수란?
 <br/>
+
+아래와 같이 매크로 함수를 정의한 후, 연속으로 사용해보면 아래와 같은 결과가 나온다.
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define SQUARE(x) x*x;
+
+int main() { 
+
+    cout << SQUARE(8);
+    cout << "\n";
+    cout << SQUARE(9+5);
+
+    return 0;
+}
+```
+
+<br/>
+
+- 출력결과
+
+64<br/>
+59<br/>
+
+<br>
+
+결과가 위와 같이 나오는 이유는 프로그램이 전처리 과정을 거친 후 컴파일러를 통해 값을 계산하여 빌드된다.<br/>
+이떄 전처리기는 #로 시작하는 문장을 처리하게 되는데, 전처리기는 () 안에 있는 변수를 텍스트로 단순 대입한다.<br/>
+그렇기 때문에 SQUARE(9+5)를 해석 할 때, 9+5 X 9+5 로 읽고, 곱셈을 먼저 처리하여 59라는 결과가 나오게 된다. <br/>
+<br/>
+이를 막기 위한 방법으론 다음과 같다.<br/>
+<br/>
+
+#### 매크로 변경
+
+<br/>
+
+매크로를 다음과 같이 선언하게 되면 변수 안에 있는 수식을 먼저 연산한다.<br/>
+
+<br/>
+
+```c++
+#define SQUARE(x) (x)*(x);
+```
+
+<br/>
+
+- 출력결과
+
+64<br/>
+196<br/>
+
+<br/>
+실제로 원했던 14<sup>2</sup> 값이 출력 되었다.<br/>
+
+<br/>
+
+#### inline 함수
+
+<br/>
+
+매크로 함수 호출은 컴파일러가 읽어들일 떄, 텍스트 형식 그대로 대입하기 때문에 신속하게 처리된다.<br/>
+그러나 함수의 내용이 큰 경우 호출을 많이하게 되면 프로그램의 크기 역시 커진다.<br/>
+
+<br/>
+
+반면에, 일반 함수를 사용하게 된다면, 컴파일러가 계산을 위해 매번 스택 메모리 공간을 할당 받아야해서 오래 걸린다. <br/>
+과도한 함수를 사용하게 되면, CPU에서 오버헤드가 발생한다. <br/>
+하지만, 복잡한 형태의 함수라면 오히려 매크로 형태보다 프로그램의 크기를 절약할 수 있다.<br/>
+일반적으로 매크로는 짧은 코드에 대해서만 사용한다.<br/>
+
+<br/>
+
+이제 위의 SQUARE를 함수로 변경해보자.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+int SQUARE(int x) {
+    return x * x;
+}
+
+int main() { 
+
+    cout << SQUARE(8);
+    cout << "\n";
+    cout << SQUARE(9+5);
+
+    return 0;
+}
+```
+
+<br/>
+
+출력 결과는 동일하다.<br/>
+
+<br/>
+
+- 출력결과
+
+64<br/>
+196<br/>
+
+<br/>
+
+하지만 위처럼 함수가 짧다면, 함수 형태보다 매크로로 전달되는 것이 프로그램 실행에 더욱 유리하다.<br/>
+함수앞에 inline 키워드를 사용한다면, 컴파일러는 해당 함수를 보고 매크로로 실행할 지 함수로 실행할 지 유리한 방식을 알아서 선택해 처리하게 된다.<br/>
+함수가 너무 길다면 컴파일러는 inline 요청을 무시한다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+inline int SQUARE(int x) {
+    return x * x;
+}
+
+int main() { 
+
+    cout << SQUARE(8);
+    cout << "\n";
+    cout << SQUARE(9+5);
+
+    return 0;
+}
+```
+
+<br/>
+
+- 출력결과
+
+64<br/>
+196<br/>
+
+<br/>
+
+
+
