Update 5. inline 함수.md

--- a/1. C++ 개요/5. inline 함수.md
+++ b/1. C++ 개요/5. inline 함수.md
@@ -38,7 +38,7 @@ int main() {
 이를 막기 위한 방법으론 다음과 같다.<br/>
 <br/>
 
-#### 매크로 변경
+#### 1) 매크로 변경
 
 <br/>
 
@@ -62,7 +62,7 @@ int main() {
 
 <br/>
 
-#### inline 함수
+#### 2) inline 함수
 
 <br/>
 
