Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -1,1 +1,15 @@
+# 6. const 키워드
+
+
+### const의 사용
+<br/>
+
+const 키워드는 상수를 정의하는데 사용 한다.
+
+```c++
+const int VAL = 10;
+const double PI = 3.15149;
+```
+
+
 
