Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -11,5 +11,50 @@ const int VAL = 10;
 const double PI = 3.15149;
 ```
 
+한번 지정된 const 변수를 수정하게 된다면 컴파일 오류가 발생한다.
 
+
+```c++
+const int VAL = 10;
+VAL = 20;  // compile error
+```
+
+<br/>
+
+### const와 포인터
+
+상수를 가리키는 포인터가 가리키는 공간은 수정할 수 없는(const) 공간이지만 상수 변수의 주소를 가리키는 포인터는 수정할 수 있는(non-const) 포인터 이다.
+
+```c++
+int value = 5, value2 = 11;
+const int * ptr = &value;
+*ptr = 10; // error: assignment of read-only location
+```
+
+포인터 상수 변수 ptr에 value 주소를 가지고 있는 경우, ptr을 이용해 값을 바꾸는 경우 error 발생.
+
+<br/>
+
+value 변수를 직접 바꾸는 경우 변수를 입력 가능하다.
+
+```c++
+int value = 5, value2 = 11;
+const int * ptr = &value;
+value = 10;
+```
+
+위의 예시 처럼 수정 가능.
+
+<br/>
+
+const 키워드는 const int * 이 아니라, const int에 적용 되기 떄문에 포인터가 가리키는 값은 바꿀 수 없지만, 주소 값은 바꿀 수 있다.
+
+```c++
+int value = 5, value2 = 11;
+const int * ptr = &value;
+std::cout << value << " " << *ptr << std::endl; // 5 5
+value = 7;
+ptr = &value2;
+std::cout << value << " " << *ptr << std::endl; // 7 11
+```
 
