Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -23,7 +23,7 @@ VAL = 20;  // compile error
 
 ### const와 포인터
 
-상수를 가리키는 포인터가 가리키는 공간은 수정할 수 없는(const) 공간이지만 상수 변수의 주소를 가리키는 포인터는 수정할 수 있는(non-const) 포인터 이다.
+- 상수를 가리키는 포인터가 가리키는 공간은 수정할 수 없는(const) 공간이지만 상수 변수의 주소를 가리키는 포인터는 수정할 수 있는(non-const) 포인터 이다.
 
 ```c++
 int value = 5, value2 = 11;
@@ -35,7 +35,7 @@ const int * ptr = &value;
 
 <br/>
 
-value 변수를 직접 바꾸는 경우 변수를 입력 가능하다.
+- value 변수를 직접 바꾸는 경우 변수를 입력 가능하다.
 
 ```c++
 int value = 5, value2 = 11;
@@ -47,7 +47,7 @@ value = 10;
 
 <br/>
 
-const 키워드는 const int * 이 아니라, const int에 적용 되기 떄문에 포인터가 가리키는 값은 바꿀 수 없지만, 주소 값은 바꿀 수 있다.
+- const 키워드는 const int * 이 아니라, const int에 적용 되기 떄문에 포인터가 가리키는 값은 바꿀 수 없지만, 주소 값은 바꿀 수 있다.
 
 ```c++
 int value = 5, value2 = 11;
