Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -25,6 +25,8 @@ VAL = 20;  // compile error
 
 - 상수를 가리키는 포인터가 가리키는 공간은 수정할 수 없는(const) 공간이지만 상수 변수의 주소를 가리키는 포인터는 수정할 수 있는(non-const) 포인터 이다.
 
+__ const int * ptr = &value __
+
 ```c++
 int value = 5, value2 = 11;
 const int * ptr = &value;
@@ -58,3 +60,12 @@ ptr = &value2;
 std::cout << value << " " << *ptr << std::endl; // 7 11
 ```
 
+즉, 포인터가 가르키는 값은 변경이 불가능 하지만 다른 변수의 주소값으로 변경 가능하다.
+
+<br/>
+
+### 포인터 const
+
+아예 포인터 자체를 상수로 지정해 주소값을 바꿀 수 없는 방법이다.
+
+```
