Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -25,7 +25,8 @@ VAL = 20;  // compile error
 
 - 상수를 가리키는 포인터가 가리키는 공간은 수정할 수 없는(const) 공간이지만 상수 변수의 주소를 가리키는 포인터는 수정할 수 있는(non-const) 포인터 이다.
 
-__ const int * ptr = &value __
+> __const int * ptr = &value__
+
 
 ```c++
 int value = 5, value2 = 11;
