Update 6. const 키워드.md

--- a/1. C++ 개요/6. const 키워드.md
+++ b/1. C++ 개요/6. const 키워드.md
@@ -61,7 +61,7 @@ ptr = &value2;
 std::cout << value << " " << *ptr << std::endl; // 7 11
 ```
 
-즉, 포인터가 가르키는 값은 변경이 불가능 하지만 다른 변수의 주소값으로 변경 가능하다.
+__즉, 포인터가 가르키는 값은 변경이 불가능 하지만 다른 변수의 주소값으로 변경 가능하다.__
 
 <br/>
 
@@ -69,4 +69,71 @@ std::cout << value << " " << *ptr << std::endl; // 7 11
 
 아예 포인터 자체를 상수로 지정해 주소값을 바꿀 수 없는 방법이다.
 
+> __int* const ptr = &value__
+
+<br/>
+
+이 경우, 주소를 바꿀 수 없다.
+
+```c++
+int value1 = 10, value2 = 20;
+int* const ptr = &value1;
+*ptr = 15;
+cout << value1;
 ```
+
+> 출력 결과 : 15
+
+포인터 ptr은 value를 가리키고, ptr이 가리키는 값을 15로 변경했으므로 15가 출력 된다.
+
+<br/>
+
+- 포인터의 주소값을 바꾸려고 하는 경우 Compile Error가 발생한다.
+
+```c++
+int value1 = 10, value2 = 20;
+int* const ptr = &value1;
+ptr = &value2; // error: assignment of read-only variable
+```
+
+포인터 const (int* const) 로 선언된 포인터는 주소 값을 변경 할 수 없다.<br/>
+포인터가 const이고, 포인터가 가리키는 값은 const가 아니다.
+
+<br/>
+
+- 포인터와 포인터가 가르키는 변수 모두 const로 선언할 수 있다.
+
+<br/>
+
+> __const int* const ptr = &value__
+
+```c++
+int value1 = 10, value2 = 20;
+const int* const ptr = &value1;
+// ptr = &value2;  // error
+// *ptr = 15;  // error
+value1 = 15;
+cout << value1;
+```
+
+ptr 포인터의 주소값 변경, ptr 포인터가 가리키는 변수값 변경 모두 불가능하다.<br/>
+value 값 변경을 위해서는 직접 변경만 가능하다. <br/>
+
+
+### 포인터와 const 키워드 사용
+
+<br/>
+
+int value = 10;
+
+> __const int* ptr1 = &value;__
+
+int로 선언 될 변수에 대한 const : (value값 수정 불가능, 주소값 변경 가능)
+
+> __int* const ptr2 = &value;__
+
+포인터 변수 ptr에 대한 const : (value값 수정 가능, 주소값 변경 불가능)
+
+> __const int* const ptr2 = &value;__
+
+포인터 변수 ptr, int로 선언될 변수에 대한 const : (value값 수정 불가능, 주소값 변경 불가능)
