Update 7. 열거 타입과 구조체.md

--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -41,3 +41,33 @@ enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정
 > {enum-list};
  
 <br/>
+<br/>
+
+
+### scoped enum
+<br/>
+
+- unscoped enum<br/>
+enum에 대한 전역 사용 가능, 별도의 범위 지정(::) 없이 사용
+```c++
+int main() { 
+
+    enum class Suit{
+    clovers,
+    diamonds,
+    hearts,
+    spades
+    };
+
+    auto diamonds = 10.5;
+    cout << diamonds;
+
+}
+```
+
+<br/>
+<br/>
+
+- scoped enum<br/>
+enum에 대한 전역 사용 가능, 별도의 범위 지정(::) 없이 사용
+
