Update 7. 열거 타입과 구조체.md

--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -30,14 +30,14 @@ enum Suit{
 
 - unscoped enum<br/>
 범위에 대한 지정이 없어 enum의 사용이 전역에서 사용 가능하다.<br>
-> enum [identifier] [: type]
+> enum [identifier] [: type] <br/>
 > {enum-list};
 
 <br/>
 
 - scoped enum<br/>
 enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정이 필요하다.<br>
-> enum [class|struct] [identifier] [: type]
+> enum [class|struct] [identifier] [: type] <br/>
 > {enum-list};
  
 <br/>
