Update 7. 열거 타입과 구조체.md

--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -36,10 +36,31 @@ enum Suit{
 <br/>
 
 - scoped enum<br/>
-enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정이 필요하다.<br>
+enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정이 필요하다.<br/>
 > enum [class|struct] [identifier] [: type] <br/>
 > {enum-list};
  
+<br/>
+
+- identifier<br/>
+열거형에 지정된 형식 이름<br/>
+
+<br/>
+
+- type<br/>
+열거자의 기본 형식, 선언 안한 경우 int 타입<br/>
+
+<br/>
+
+- 열거 목록<br/>
+열거형에 포함된 열거자 목록.<br/>
+모든 열거자의 이름은 고유해야 하나, 값은 중복 될 수 있다.<br/>
+
+<br/>
+
+- class<br/>
+열거형의 범위 지정<br/>
+
 <br/>
 <br/>
 
@@ -49,6 +70,34 @@ enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정
 
 - unscoped enum<br/>
 enum에 대한 전역 사용 가능, 별도의 범위 지정(::) 없이 사용
+```c++
+int main() { 
+
+    enum Suit{
+    clovers,
+    diamonds,
+    hearts,
+    spades
+    };
+
+    auto diamonds = 10.5;
+    cout << diamonds;
+
+}
+```
+
+<br/>
+
+Compile Error!!<br/>
+error: 'auto diamonds' redeclared as different kind of symbol<br/>
+enum의 diamonds 변수가 전역 사용되고, enum 변수의 타입은 기본적으로 int 타입이다.<br/>
+따라서, auto 키워드를 활용해 다른 타입의 변수를 사용한다면 기존 int 타입과 충돌이 되어 Compile Error가 발생한다.
+
+<br/>
+<br/>
+
+- scoped enum<br/>
+enum에 대한 namespace 범위 지정, 별도의 범위 지정이(::) 필요하다.
 ```c++
 int main() { 
 
@@ -66,8 +115,7 @@ int main() {
 ```
 
 <br/>
-<br/>
 
-- scoped enum<br/>
-enum에 대한 전역 사용 가능, 별도의 범위 지정(::) 없이 사용
+출력 결과 : 10.5 <br/>
+Suit 열거 타입이 class 범위로 지정되어, auto diamonds라는 새로운 변수가 지정되었다.
 
