Update 7. 열거 타입과 구조체.md

--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -28,14 +28,14 @@ enum Suit{
 
 열거 타입은 아래의 구조로 선언 가능하다.<br/>
 
-- unscoped enum<br/>
+__unscoped enum__<br/>
 범위에 대한 지정이 없어 enum의 사용이 전역에서 사용 가능하다.<br>
 > enum [identifier] [: type] <br/>
 > {enum-list};
 
 <br/>
 
-- scoped enum<br/>
+__scoped enum__<br/>
 enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정이 필요하다.<br/>
 > enum [class|struct] [identifier] [: type] <br/>
 > {enum-list};
@@ -60,6 +60,36 @@ enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정
 
 - class<br/>
 열거형의 범위 지정<br/>
+
+<br/>
+
+#### 열거자 변수 지정
+<br/>
+열거자에 대한 기본 값은 별다른 선언이 없는 경우 가장 먼저 선언된 열거자는 0이고 다음 열거자는 1씩 추가된다.<br/>
+위 예시에 열거자의 경우,<br/>
+
+>> { clovers = 0, diamonds = 1, hearts = 2, spades = 3 }<br/>
+
+이 선언 된다.<br/>
+
+<br/>
+
+만약 별도로 열거자에 대한 변수를 선언하면, 해당 열거자는 선언한 변수로 값이 지정되고 다음 열거자는 1씩 추가된다.<br/>
+
+```
+enum Suit{
+  clovers = 4,
+  diamonds,
+  hearts = 3,
+  spades
+};
+```
+<br/>
+위 예시 열거자는 다음과 같이 변수가 지정된다.
+
+>> { clovers = 4, diamonds = 5, hearts = 3, spades = 4 }<br/>
+
+지정된 변수 값을 기준으로 1씩 추가되고, 동일한 변수도 지정 될 수 있다.<br/>
 
 <br/>
 <br/>
@@ -119,3 +149,6 @@ int main() {
 출력 결과 : 10.5 <br/>
 Suit 열거 타입이 class 범위로 지정되어, auto diamonds라는 새로운 변수가 지정되었다.
 
+<br/><br/>
+#### scoped enum의 사용
+<br/>
