--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -68,7 +68,7 @@ enum이 class 혹은 struct namespace에 들어가므로 별도의 범위 지정
 열거자에 대한 기본 값은 별다른 선언이 없는 경우 가장 먼저 선언된 열거자는 0이고 다음 열거자는 1씩 추가된다.<br/>
 위 예시에 열거자의 경우,<br/>
 
->> { clovers = 0, diamonds = 1, hearts = 2, spades = 3 }<br/>
+> { clovers = 0, diamonds = 1, hearts = 2, spades = 3 }<br/>
 
 이 선언 된다.<br/>
 
@@ -87,7 +87,7 @@ enum Suit{
 <br/>
 위 예시 열거자는 다음과 같이 변수가 지정된다.
 
->> { clovers = 4, diamonds = 5, hearts = 3, spades = 4 }<br/>
+> { clovers = 4, diamonds = 5, hearts = 3, spades = 4 }<br/>
 
 지정된 변수 값을 기준으로 1씩 추가되고, 동일한 변수도 지정 될 수 있다.<br/>
 
@@ -119,6 +119,7 @@ int main() {
 <br/>
 
 Compile Error!!<br/>
+<br/>
 error: 'auto diamonds' redeclared as different kind of symbol<br/>
 enum의 diamonds 변수가 전역 사용되고, enum 변수의 타입은 기본적으로 int 타입이다.<br/>
 따라서, auto 키워드를 활용해 다른 타입의 변수를 사용한다면 기존 int 타입과 충돌이 되어 Compile Error가 발생한다.
@@ -147,6 +148,7 @@ int main() {
 <br/>
 
 출력 결과 : 10.5 <br/>
+<br/>
 Suit 열거 타입이 class 범위로 지정되어, auto diamonds라는 새로운 변수가 지정되었다.
 
 <br/><br/>
