Update 7. 열거 타입과 구조체.md

--- a/1. C++ 개요/7. 열거 타입과 구조체.md
+++ b/1. C++ 개요/7. 열거 타입과 구조체.md
@@ -106,10 +106,10 @@ enum에 대한 전역 사용 가능, 별도의 범위 지정(::) 없이 사용
 int main() { 
 
     enum Suit{
-    clovers,
-    diamonds,
-    hearts,
-    spades
+        clovers,
+        diamonds,
+        hearts,
+        spades
     };
 
     auto diamonds = 10.5;
@@ -137,10 +137,10 @@ enum에 대한 namespace 범위 지정, 별도의 범위 지정이(::) 필요하
 int main() { 
 
     enum class Suit{
-    clovers,
-    diamonds,
-    hearts,
-    spades
+        clovers,
+        diamonds,
+        hearts,
+        spades
     };
 
     auto diamonds = 10.5;
@@ -217,8 +217,8 @@ int main() {
 ```
 <br/>
 
->> 1 <br/>
->> 2 <br/>
+> 1 
+> 2 
 
 <br/>
 
@@ -226,4 +226,46 @@ int main() {
 
 <br/>
 
-2) 
+2) enum class 선언
+
+<br/>
+
+C++ 11 부터는 enum class 를 사용해 별도의 namespace 없이 구분 가능하다. 
+
+```c++
+#include <iostream>
+using namespace std;
+
+enum class Suit{
+    clovers,
+    diamonds,
+    hearts,
+    spades
+};
+
+enum class Jewelry{
+    ruby,
+    sapphire,
+    diamonds,
+};
+
+int main() { 
+    cout << (int)Suit::diamonds << endl;
+    cout << (int)Jewelry::diamonds << endl;
+    return 0;
+}
+```
+
+<br/>
+
+> 1 
+> 2 
+
+<br/>
+
+enum class 선언 시 열거 타입 이름을 이용해 선언한다. (Suit::diamonds) <br/>
+
+
+
+
+
