--- a/1. C++ 개요/8. 함수 오버로딩.md
+++ b/1. C++ 개요/8. 함수 오버로딩.md
@@ -19,3 +19,79 @@ double ave(double n1, double n2) {
 
 <br/>
 
+이 함수는 double 변수를 갖는 두개의 수를 입력해 같은 double 변수의 평균을 구한다. <br/>
+하지만, 평균을 구하는 데에는 꼭 두개의 수를 사용하지 않는다. <br/>
+오버로딩을 사용하지 않고, 두 수와 세개의 수의 평균을 구하는 함수를 각각 구하면 아래와 같다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+double ave(double n1, double n2) {
+
+    return ((n1 + n2) / 2.0);
+
+}
+
+double ave3(double n1, double n2, double n3) {
+
+    return ((n1 + n2 + n3) / 3.0);
+
+}
+
+int main() { 
+
+    cout << ave3(3.0, 2.9, 2.0) << endl;
+    cout << ave(3.5, 4.5) << endl;
+
+    return 0;
+}
+```
+
+<br/>
+
+> 2.63333
+> 4
+
+<br/>
+
+위에서 보면 두 수의 평균값과 세 수의 평균 값을 구하기 위해 2개의 함수를 사용 했다.<br/>
+하지만, 함수의 오버로딩을 활용하면 동일한 함수 명으로 평균을 구할 수 있다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+double ave(double n1, double n2) {
+
+    return ((n1 + n2) / 2.0);
+
+}
+
+double ave(double n1, double n2, double n3) {
+
+    return ((n1 + n2 + n3) / 3.0);
+
+}
+
+int main() { 
+
+    cout << ave(3.0, 2.9, 2.0) << endl;
+    cout << ave(3.5, 4.5) << endl;
+
+    return 0;
+}
+```
+
+<br/>
+
+> 2.63333
+> 4
+
+<br/>
+
+
