Update 8. 함수 오버로딩.md

--- a/1. C++ 개요/8. 함수 오버로딩.md
+++ b/1. C++ 개요/8. 함수 오버로딩.md
@@ -93,5 +93,78 @@ int main() {
 > 4 <br/>
 
 <br/>
+<br/>
+
+#### 1) 오버로딩은 Function Return Types 으로 불가능 하다.
+
+<br/>
+
+함수의 오버로딩은 파라미터로 구분된다. <br/>
+그렇기 때문에, 함수의 반환 변수는 고려 대상이 아니다.<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+double ave(double n1, double n2) {
+
+    return ((n1 + n2) / 2.0);
+
+}
+
+int ave(double n1, double n2) {
+
+    return ((n1 + n2 + n3) / 3.0);
+
+}
+
+int main() { 
+
+    cout << ave(3.0, 2.9) << endl;
+    cout << ave(3.5, 4.5) << endl;
+
+    return 0;
+}
+```
+
+<br/>
+
+여기의 함수를 보면 ave function의 반환 값은 double과 int 두 가지 반환 값을 사용했고, 파라미터는 동일하다.<br/>
+함수의 오버로딩은 파라미터로 구분 되므로, 파라미터가 동일하다면 위의 코드는 Compile Error가 발생 한다. <br/>
+
+<br/>
+
+
+#### 2) 함수 오버로딩은 세가지 결과 중 하나가 출력된다.
+
+<br/>
+
+- 일치하는 함수가 있다. (특정 오버로드된 함수 호출) <br/>
+- 일치하는 함수가 없다. (파라미터가 일치하는 함수가 없어 호출되지 않음) <br/>
+- 모호한 함수가 있다. (하나 이상의 오버로드 함수와 파라미터가 일치) <br/>
+
+<br/>
+<br/>
+
+1. C++의 컴파일러는 정확하게 일치하는 파라미터를 찾으려고 한다. <br/>
+
+```c++
+void printValue(char* value){
+    printf("char* : %d", value);
+}; 
+void printValue(int value){
+    printf("int : %d", value);
+};
+
+int main() { 
+    printValue(0);
+    return 0;
+}
+```
+
+
+
+
+
 
 
