Update 8. 함수 오버로딩.md

--- a/1. C++ 개요/8. 함수 오버로딩.md
+++ b/1. C++ 개요/8. 함수 오버로딩.md
@@ -146,7 +146,9 @@ int main() {
 <br/>
 <br/>
 
-1. C++의 컴파일러는 정확하게 일치하는 파라미터를 찾으려고 한다. <br/>
+#### 1. C++의 컴파일러는 정확하게 일치하는 파라미터를 찾으려고 한다. <br/>
+
+<br/>
 
 ```c++
 void printValue(char* value){
@@ -161,9 +163,153 @@ int main() {
     return 0;
 }
 ```
+<br/>
 
+> int : 0 <br/>
 
+<br/>
 
+위의 함수를 보면 파라미터가 char*, int 2가지 이다.<br/>
+main에 있는 printValue의 파라미터 0은 char* 변수와 기술적으로는 맞을 지 모르나,<br/>
+기본적으로 int형이 기술적으로나 의미적으로나 정확히 일치하는 변수다.<br/>
+따라서, 출력 결과에는 int 파라미터의 함수를 사용한다.<br/>
+
+<br/>
+<br/>
+
+#### 2. 정확히 일치하는 파라미터가 없다면 암시적 형 변환을 실시한다.
+
+<br/>
+
+```c++
+void printValue(char* value){
+    printf("char* : %d", value);
+}; 
+void printValue(int value){
+    printf("int : %d", value);
+};
+
+int main() { 
+    printValue('a');
+    return 0;
+}
+```
+
+<br/>
+
+> int :97 <br/>
+
+<br/>
+
+'a'와 정확히 일치하는 타입은 char이다.<br/>
+하지만, char형 파라미터가 없으므로 컴파일러는 암시적 형 변환을 이용해 오버로딩할 함수를 찾는다.<br/>
+
+<br/>
+
+암시적 형 변환은 다음의 순서를 따른다.<br/>
+
+- char, unsigned char 및 short가 int로 승격된다. <br/> 
+- unsigned short는 int의 크기에 따라 int 또는 unsigned int로 승격된다. <br/>
+- float은 double로 승격된다. <br/>
+- 열거형(enum)은 int로 승격된다. <br/>
+
+<br/>
+
+위 규칙에 따라 'a'는 int로 승격 된다. 따라서 'a'가 가지고 있는 주소값 97이 출력된다.<br/>
+
+<br/>
+<br/>
+
+#### 3. 암시적 형 변환이 불가능 한 경우 표준 변환을 통해 값을 찾는다.
+
+<br/>
+
+```c++
+void printValue(string value){
+    printf("char* : %d", value);
+}; 
+void printValue(float value){
+    printf("float : %f", value);
+};
+
+int main() { 
+    printValue(30);
+    return 0;
+}
+```
+
+<br/>
+
+> float : 30.000000 <br/>
+
+<br/>
+
+30과 정확히 일치하는 타입은 int다. <br/>
+하지만, int 파라미터가 없기 떄문에 암시적 형 변환으로 변수를 찾는다. <br/>
+암시적 형 변환에서도 실패할 경우 표준형 변환으로 변수를 찾는다.<br/>
+
+<br/>
+
+- 숫자 타입은 다른 숫자 타입으로 변환된다. (Ex. int->float) <br/>
+- 열거형(enum)은 위에서 말한 숫자 공식과 같다. (Ex. enum->int->float) <br/>
+- 0은 포인터 타입 및 숫자 타입과 일치한다.(Ex. 0->char* or 0->float) <br/>
+- 포인터는 void 포인터와 일치한다. <br/>
+
+<br/>
+<br/>
+
+위 세가지 방법을 통해서 컴파일러는 오버로딩에 맞는 파라미터를 찾는다.<br/>
+만약 세가지 방법 모두 찾지 못한다면 최종적으로 사용자가 Class에 정의한 사용자 정의 변환을 찾고, <br/>
+그것도 불가능 한 경우 Complie Error가 발생한다. <br/>
+
+<br/>
+
+#### 모호한 일치 (Ambiguous matches)
+
+<br/>
+
+위의 컴파일러 변환 규칙을 살펴보면 다음과 같은 의문점이 생긴다.<br/>
+
+<br/>
+
+> 만약 암시적 형 변환 혹은 표준 형 변환 단계가 동시에 파라미터로 존재한다면 어떤 함수에 오버로딩 할 것인가?<br/>
+
+<br/>
+<br/>
+
+```c++
+void printValue(unsigned int value){
+    printf("unsigned int : %d", value);
+}; 
+void printValue(float value){
+    printf("float : %f", value);
+};
+
+int main() { 
+    printValue('a');
+    return 0;
+}
+```
+
+<br/>
+<br/>
+
+위의 코드를 보면 'a'의 암시적 형 변환은 int이므로 찾는 파라미터 변수가 없다. <br/>
+하지만 표준 형 변환을 통해 unsigned int와 float 둘다 변형이 가능하다. <br/>
+이 경우 컴파일러는 Compile Error를 발생시키며 모호한 일치를 출력한다.<br/>
+
+<br/>
+
+> __error: call of overloaded 'printValue(char)' is ambiguous__ <br/>
+
+<br/>
+
+모호한 일치가 발생한 경우 아래의 방법으로 해결 가능하다.<br/>
+
+<br/>
+
+1. 오버로딩된 함수의 파라미터를 한단계 높은 변수 타입으로 바꾼다. <br/>
+2. 호출에 사용되는 변수를 명시적으로 바꾼다. <br/>
 
 
 
