--- a/1. C++ 개요/9. 레퍼런스.md
+++ b/1. C++ 개요/9. 레퍼런스.md
@@ -45,3 +45,219 @@ __선언 방법 : 자료형& 별명 = 변수명;__
 > 출력 결과 : a = 5 <br/>
 >             ref_a = 5 <br/>
 
+<br/>
+<br/>
+
+__레퍼런스를 반환하는 Function__
+
+<br/>
+
+함수가 값을 반환할 때 레퍼런스를 반환하게 할 수도 있다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+int& max(int& a, int& b){
+  if (a>b) return a;
+  else return b;
+}
+
+int main() { 
+  int i=20, j=10;
+  int& k = max(i,j)
+  cout << k << endl;
+  return 0;
+}
+```
+
+<br/>
+
+> 20
+
+<br/>
+
+위 function의 경우 파라미터와 반환 값 모두 레퍼런스이다.<br/>
+max(i, j)가 선언되면, 파라미터 사용으로 인해 int& a = i, int& b = j가 선언된다.<br/>
+max function에서 레퍼런스 a (20), b (10)에 대한 비교를 하고 더 큰 레퍼런스 a를 반환한다.<br/>
+그 다음 k 레퍼런스에 반환 레퍼런스 a (20)가 들어가고 출력시 20이 출력된다.<br/>
+
+<br/>
+
+
+#### 2) const 값 참조형
+
+<br/>
+
+레퍼런스에 const 속성을 지정해서 const 레퍼런스로 정의하면 임시값으로 초기화가 가능하다. <br/>
+한번 정해진 const 레퍼런스는 수정 불가능하다. <br/>
+
+<br/>
+
+__선언 방법 : const 자료형& 별명 = 변수명;__
+
+<br/>
+
+``` c++
+    const int& ref = 10;
+```
+<br/>
+
+선언된 const 레퍼런스를 수정하는 경우 Complie Error가 발생한다.
+
+<br/>
+
+```c++
+  const int& ref = 10;
+  ref = 20;
+```
+
+<br/>
+
+#### 3) R-value 참조형
+
+<br/>
+
+우측값 참조형 (R-value Reference)은 C++ 11에 새로 추가된 기능이다. <br/>
+
+<br/>
+
+- 좌측값 (L-value) : C++에서 선언되는 변수
+- 우측값 (R-value) : 배정 연산자 우측에 놓이게 되는 상수나 표현식
+
+<br/>
+
+```c++
+    int x = 2; y = 3;
+    int z = x + y;
+```
+
+<br/>
+
+> 좌측값 : x, y, z
+> 우측값 : x + y
+
+<br/>
+
+앞에서 본 레퍼런스의 경우 이미 정의된 기존 변수에 대한 레퍼런스이므로, 좌측값 레퍼런스이다.<br/>
+우측값 레퍼런스의 경우 이름을 갖지 않는 임시값에 대해서도 메모리의 상수 영역이 아닌 곳에 메모리 방을 생성하고,<br/>
+그 방에 이름을 붙여 일반 변수화 시키는 것이다.<br/>
+
+<br/>
+
+```c++
+    int x=2; y=3;
+    int&& m = 3;        // int m = 3과 같은 효과
+    int&& k = x + y;    // int k = x + y와 같은 효과
+    int&& t = x;        // t는 x의 별명이 아니고 int t = x와 같은 효과
+```
+
+<br/>
+
+__R-value Reference를 사용하는 이유__
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+void increment(int& value){
+  cout << "l-value" << endl;
+  ++value;
+}
+
+void increment(int&& value){
+  cout << "r-value" << endl;
+  ++value;
+  cout << "value : " << value << endl;
+}
+
+int main() { 
+  int a = 10, b = 20;
+  increment(a);
+  cout << "a : " << a << endl;
+  increment(a+b);
+  increment(3);
+  cout << "a : " << a << endl;
+  return 0;
+}
+```
+
+<br/>
+
+> l-value
+> a : 11
+> r-value
+> value : 32
+> r-value
+> value : 4
+> a : 11
+
+<br/>
+
+좌측값, 우측값 레퍼런스는 주로 함수의 파라미터로 사용된다.<br/>
+첫 increment function에는 좌측값 레퍼런스 변수를 오버로딩 한다. <br/>
+따라서, value 별칭에 a가 들어가게 되고, value를 1 더하게되어 a가 11이 된다.<br/>
+
+두 번째 increment function에는 우측값 변수가 오버로딩 된다.<br/>
+
+<br/>
+
+__int&& value = a + b;__
+
+<br/>
+
+따라서, value라는 값에 a + b의 결과인 31이 들어간다.<br/>
+그 다음 value의 값이 1 추가되어 32가 되고, 그 값이 출력되었다.<br/>
+
+<br/>
+
+마지막 increment function에는 3이 우측값 레퍼런스로 들어가고, 1이 추가된 4가 출력된다.<br/>
+
+<br/>
+
+우측값 레퍼런스는 우측값을 변수화시키는 기능이다.<br/>
+따라서, 좌측값 레퍼런스 이후엔 아무런 변화가 나타나지 않는다.<br/>
+
+
+<br/>
+
+
+#### 참조형 레퍼런스의 특징
+
+<br/>
+
+- 선언과 동시에 반드시 초기화 되어야 한다.
+
+```c++
+  int& ref_a;   // Compile Error!
+```
+
+<br/>
+
+- non-const 값 참조형 레퍼런스의 경우 반드시 non-const 값만 지정할 수 있다.
+
+```c++
+  int a = 3;
+  int& ref_a = a;
+  
+  const int b = 6;
+  int& ref_b = a;   // Compile Error!
+  
+  int& ref_c = 8;   // Compile Error!
+```
+
+<br/>
+
+- 초기화 된 이후 다른 변수로 변경할 수 없다.
+
+```c++
+  int a = 3;
+  int b = 3;
+  int& ref_a = a;
+  ref_a = b;   // Compile Error!
+```
+
+<br/>
