Update 11. String 타입.md

--- a/1. C++ 개요/11. String 타입.md
+++ b/1. C++ 개요/11. String 타입.md
@@ -58,9 +58,9 @@ int main() {
 
 <br/>
 
-> String 1
-> String 2
-> String 1
+> String 1 <br/>
+> String 2 <br/>
+> String 1 <br/>
 
 <br/>
 <br/>
@@ -79,17 +79,17 @@ str의 n 번째 요소 참조 (범위 검사 수행)<br/>
 <br/>
 
 ```c++
-	string str1 = "ABCDEFG";
+  string str1 = "ABCDEFG";
 	
-	cout << str1.at(4) << endl;
+  cout << str1.at(4) << endl;
   cout << str1.at(7) << endl;
-	return 0;
+  return 0;
 ```
 
 <br/>
 
-> E
-> std::out_of_range
+> E <br/>
+> std::out_of_range <br/>
 
 <br/>
 <br/>
@@ -111,7 +111,7 @@ str의 n 번째 요소 참조 (범위 검사 안함)<br/>
 
 <br/>
 
-> E
+> E <br/>
 
 <br/>
 <br/>
@@ -133,15 +133,15 @@ __4)  str.back()__
 <br/>
 
 ```c++
-	string str1 = "ABCDEFG";
+  string str1 = "ABCDEFG";
 	
-	cout << str1.front() << endl;
+  cout << str1.front() << endl;
   cout << str1.back() << endl;
 	return 0;
 ```
 
-> A
-> G
+> A <br/>
+> G <br/>
 
 <br/>
 <br/>
@@ -171,9 +171,9 @@ __길이 관련 Function__
 
 <br/>
 
-> 7
-> 7
-> 15
+> 7 <br/>
+> 7 <br/>
+> 15 <br/>
 
 <br/>
 <br/>
@@ -195,8 +195,43 @@ __문자열 편집 Function__
 
 __문자열 type 변환 Function__
 
+<br/>
+
+1. stoi(string s) : 문자열 s를 정수형으로 변환
+
+<br/>
+
+```c++
 	string str1 = "300";
 	
 	cout << str1 + str1 << endl;
 	cout << stoi(str1) + stoi(str1)  << endl;
 	return 0;
+```
+
+<br/>
+
+> 300300 <br/>
+> 600 <br/>
+
+<br/>
+
+2. to_string(int n) : 정수형 변수 n을 문자열로 변환
+
+<br/>
+
+```c++
+	int n = 300;
+	
+	cout << n + n << endl;
+	cout << to_string(n) + to_string(n)  << endl;
+	return 0;
+```
+
+<br/>
+
+> 600 <br/>
+> 300300 <br/>
+
+<br/>
+
