Update 12. new 와 delete 연산자.md

--- a/1. C++ 개요/12. new 와 delete 연산자.md
+++ b/1. C++ 개요/12. new 와 delete 연산자.md
@@ -195,6 +195,6 @@ delete[] heapArray;
 <br/>
 
 이 경우 배열은 heap 영역에 선언되고, heap 영역의 주소가 stack에 선언된다. <br/>
-delete 연산자를 선언하는 경우 메모리 영역이 삭제된다. <
+delete 연산자를 선언하는 경우 메모리 영역이 삭제된다. <br/>
 
 <br/>
