Update #1. 템플릿 함수.md

--- a/2. 제네릭 프로그래밍/#1. 템플릿 함수.md
+++ b/2. 제네릭 프로그래밍/#1. 템플릿 함수.md
@@ -195,5 +195,63 @@ int main() {
 
 __선언 방법 : function'<'data type'>'__
 
+<br/>
 
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+T getMax(T a, T b){
+  if(a > b) return a;
+  else return b;
+}
+
+
+int main() { 
+  cout << getMax<double>(151.3, 10) << endl;
+  cout << getMax<int>(11, 25.5) << endl;
+
+  return 0;
+}
+```
+
+<br/>
+
+> 151.3 <br/>
+> 25 <br/>
+
+<br/>
+
+첫번 째 fuction은 Generic Type을 double 형으로 사용했다.<br/>
+따라서, 151.3을 반환한다. <br/>
+
+<br/>
+
+두첫번 째 fuction은 Generic Type을 int 형으로 사용했다.<br/>
+따라서, 큰 수인 25.5가 25로 변환되어 출력된다. <br/>
+
+<br/>
+<br/>
+
+### 1-3. STL (Standard Template Library)
+
+<br/>
+
+C++ 표준 라이브러리는 프로그램에 필요한 자료구조와 알고리즘을 제공하는 Template 라이브러리가 존재한다.<br/>
+
+<br/>
+
+__STL의 구성요소__
+
+<br/>
+
+- Container : 객체를 저장하는 객체, 자료구조 <br/>
+- Iterator : 포인터와 비슷한 개념으로 컨테이너의 원소를 가리키고, 가리키는 원소에 접근하여 다음 원소를 가리키는 기능 <br/>
+- Algorithm : 정렬, 삭제, 검색, 연산 등을 해결하는 일반화된 방법을 제공하는 함수 템플릿 <br/>
+- Function Object : 자주 사용되는 알고리즘 함수, 주로 operator() 연산자를 오버로딩 함 <br/>
+- Container Adaptor : 구성요소의 인터페이스를 변경해 새로운 인터페이스를 갖는 구성요소로 변경, Stack, Queue 등 <br/>
+- Allocator : 컨테이너의 메모리 할당 정책을 캡슐화한 클래스 객체로 모든 컨테이너는 자신만의 할당기 사용 <br/>
+
+<br/>
 
