Update #1. 템플릿 함수.md

--- a/2. 제네릭 프로그래밍/#1. 템플릿 함수.md
+++ b/2. 제네릭 프로그래밍/#1. 템플릿 함수.md
@@ -254,4 +254,77 @@ __STL의 구성요소__
 - Allocator : 컨테이너의 메모리 할당 정책을 캡슐화한 클래스 객체로 모든 컨테이너는 자신만의 할당기 사용 <br/>
 
 <br/>
+<br/>
 
+#### STL Function 사용 예시
+
+<br/>
+
+max, min function의 경우 STL에 선언되어 있으므로 별도의 function 선언 없이도 가능하다.<br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+int main() { 
+  cout << max(151.3, 10.2);
+  return 0;
+}
+```
+
+<br/>
+
+> 151.3 <br/>
+
+<br/>
+
+#### STL Vector 사용 예시
+
+<br/>
+
+STL을 통해 자료구조에 대한 선언도 가능하다. <br/>
+Java의 ArrayList와 비슷한 Vector의 구현도 가능하다. <br/>
+좀더 자세한 구조는 다음 시간에 다뤄보자. <br/>
+
+```c++
+#include <iostream>
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+int main() { 
+
+  // Vector 자료구조 선언 (int 형 변수)
+  vector<int> v1;
+
+  // 자료 입력
+  v1.push_back(10);
+  v1.push_back(50);
+  v1.push_back(2);
+  v1.push_back(77);
+  v1.push_back(8);
+
+  // Iterator로 Vector의 아이템을 출력
+  // begin() : 첫번째 위치의 Iterator를 리턴
+  // v1.end() : 마지막 아이템 다음 위치의 Iterator를 리턴
+  for (auto i = v1.begin(); i != v1.end(); ++i)
+    cout << *i << " ";
+    
+  // Vector 원소 Sort
+  sort(v1.begin(), v1.end());
+  
+  cout << "\nSort" << endl;
+  
+  for (auto i = v1.begin(); i != v1.end(); ++i)
+    cout << *i << " ";
+
+}
+```
+
+<br/>
+
+> 10 50 2 77 8 <br/>
+> Sort <br/>
+> 2 8 10 50 77 <br/> 
