Update #2. 제너릭 포인터.md

--- a/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
+++ b/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
@@ -50,3 +50,198 @@ __실행 결과__
 <br/>
 <br/>
 
+### Null Pointer
+
+<br/>
+
+만약 함수의 파라미터를 int형과 int pointer 2개로 나눠서 overloading 했다고 가정하자.<br/>
+이 경우 다음과 같은 결과가 출력된다.<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void func(int a){
+  cout << "int function" << endl;
+}
+
+void func(int* a){
+  cout << "int* function" << endl;
+}
+
+
+int main() { 
+
+  func(0);
+  func(NULL);
+  
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> call of overloaded ‘func(NULL)’ is ambiguous <br/>
+>   func(NULL);
+
+<br/>
+
+NULL 값은 기본적으로 0이지만, int* 파라미터와도 겹치기 때문에 ambiguous error가 발생한다. <br/>
+이 문제를 해결하기 위해 Null Pointer를 사용한다.<br/>
+
+<br/>
+
+__키워드 : nullptr__
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void func(int a){
+  cout << "int function" << endl;
+}
+
+void func(int* a){
+  cout << "int* function" << endl;
+}
+
+
+int main() { 
+
+  func(0);
+  func(nullptr);
+  
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> int function <br/>
+> int* function <br/>
+
+<br/>
+
+### null pointer의 사용
+
+<br/>
+
+pointer는 앞서 배운대로 한 변수의 주소를 가리킨다.<br/>
+pointer에 아무값도 할당되지 않았을 떄에는 해당 포인터 변수는 가비지 값을 가진다. <br/>
+
+<br/>
+
+__할당되지 않은 포인터__
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+int main() { 
+
+  int* int_pointer;
+  char* char_pointer;
+
+  cout << "int_pointer = " << int_pointer << endl;
+  cout << "char_pointer = " << char_pointer << endl;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> int_pointer = 0 <br/>
+> char_pointer = <br/>
+
+<br/>
+
+__Pointer에 Null 값 입력__ 
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+int main() { 
+
+  int* int_pointer = NULL;
+  int* int_pointer2 = nullptr;
+
+  cout << "int_pointer = " << int_pointer << endl;
+  cout << "int_pointer2 = " << int_pointer2 << endl;
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> int_pointer = 0 <br/>
+> int_pointer2 = 0 <br/>
+
+<br/>
+
+위와 같이 Null 값을 가리키는 포인터를 만드는 방법은 2가지이다.<br/>
+
+<br/>
+
+이를 활용하면 다음과 같이 변수를 전달하는 방법도 사용 가능하다. <br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+void doSomething(double* ptr) { 
+	
+	if (ptr) cout << "You passed in " << *ptr << '\n' << endl; 
+	else cout << "You passed in a null pointer\n" << endl; 
+	
+}
+
+int main() { 
+	double a = 20.3;
+	doSomething(&a);      // 20.3 변수가 있는 주소 값 전달
+	doSomething(0);       // 0 (null) 값 전달
+	doSomething(NULL);    // Null 값 전달
+	doSomething(nullptr); // null pointer 전달
+	return 0; 
+	
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> You passed in 20.3 <br/>
+> You passed in a null pointer <br/>
+> You passed in a null pointer <br/>
+> You passed in a null pointer <br/>
+
+<br/>
+<br/>
+<br/>
+
+## 2) 객체 포인터 (Class pointer)
+
+<br/>
+
+
