Update #2. 제너릭 포인터.md

--- a/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
+++ b/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
@@ -244,4 +244,67 @@ __출력 결과__
 
 <br/>
 
+객체 포인터란 말 그대로 객체의 주소값을 갖는 포인터를 의미한다.<br/>
 
+<br/>
+
+### 2-1. 객체 포인터 선언
+
+<br/>
+
+다음과 같이 원을 객체로 선언했다고 가정하자.<br/>
+
+<br/>
+
+```c++
+class Circle{
+	int radius;
+	public:
+		Circle (int r) {
+			radius = r;
+		};
+		double getWidth() {
+			return 3.14*radius*radius;
+		}
+};
+```
+
+<br/>
+
+Circle 객체는 반지를을 변수로 가지고 있다. (int radius) <br/>
+그리고 원의 넓이를 구할 수 있는 함수를 선언 했다. (double getWidth()) <br/>
+
+<br/>
+
+그 다음 main 함수를 통해 원을 생성하고, 넓이를 출력해보자. <br/>
+
+<br/>
+
+```c++
+int main() { 
+	
+	Circle circle1(2);
+	cout << circle1.getWidth() << endl;
+	
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 12.56 <br/>
+
+<br/>
+<br/>
+
+객체도 포인터를 이용해 선언할 수 있다. <br/>
+
+<br/>
+
+__Circle* cptr;__
+ : Circle 객체 포인터를 cptr로 선언 함<br/>
+
+<br/>
