Update #2. 제너릭 포인터.md

--- a/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
+++ b/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
@@ -308,3 +308,11 @@ __Circle* cptr;__
  : Circle 객체 포인터를 cptr로 선언 함<br/>
 
 <br/>
+
+__cptr = &circle1;__
+  : 객체 포인터 cptr에 circle1의 주소를 할당<br/>
+  
+<br/>
+
+이제 포인터를 활용해 원을 출력해보자.<br/>
+
