Update #2. 제너릭 포인터.md

--- a/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
+++ b/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
@@ -306,13 +306,146 @@ __출력 결과__
 
 __Circle* cptr;__
  : Circle 객체 포인터를 cptr로 선언 함<br/>
-
-<br/>
-
 __cptr = &circle1;__
   : 객체 포인터 cptr에 circle1의 주소를 할당<br/>
   
 <br/>
 
 이제 포인터를 활용해 원을 출력해보자.<br/>
+
+<br/>
+
+```c++
+int main() { 
+	
+	Circle circle1(2);
+	
+	Circle* cptr;
+	cptr = &circle1;
+	
+	cout << cptr->getWidth() << endl;
+	
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> 12.56 <br/>
+
+<br/>
+
+앞서 구한 방법과 동일한 결과가 출력된다.<br/>
+
+<br/>
+<br/>
+
+### 2-2. 객체 포인터 활용
+
+<br/>
+
+객체 포인터를 활용한다면 여러개의 원의 값을 구할 떄 주소값만 바꿔, 간단한 코드로 구현 가능하다.<br/>
+
+<br/>
+
+__예시 프로그램__
+
+<br/>
+
+아래는 반지름의 길이가 10, 20, 30, 40, 50인 원의 넓이를 순서대로 구하는 방법이다.<br/>
+Circle 객체의 경우 위와 선언이 같으므로 생략했다.<br/>
+
+<br/>
+
+```c++
+int main() { 
+	
+	Circle circle_array[5] = {
+		Circle(10), Circle(20), Circle(30), Circle(40), Circle(50)
+	};
+	int temp = 0;
+	
+	Circle* cptr = circle_array;
+	
+	for(int i=0; i<5; i++){
+		cout << "Circle " << i << " width = " << cptr->getWidth() << endl;
+		cptr++;
+	}
+	
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Circle 0 width = 314 <br/>
+> Circle 1 width = 1256 <br/>
+> Circle 2 width = 2826 <br/>
+> Circle 3 width = 5024 <br/>
+> Circle 4 width = 7850 <br/>
+
+<br/>
+
+객체 포인터 역시 다른 포인터와 마찬가지로 new 연산자를 활용한 동적 선언이 가능하다.<br/>
+동적 연산을 사용하는 경우 별도의 포인터 변수 선언 없이도 구현이 가능하다.<br/>
+
+<br/>
+
+```
+#include <iostream>
+using namespace std;
+
+class Circle{
+	int radius;
+	public:
+		Circle () { radius = 0; }
+		Circle (int r) {
+			radius = r;
+		};
+		void setRadius(int r) {
+			radius = r;
+		}
+		double getWidth() {
+			return 3.14*radius*radius;
+		}
+};
+
+int main() { 
+	
+	Circle *circle_array = new Circle[5];
+	int temp = 0;
+
+	for(int i=0; i<5; i++){
+    temp += 10;
+    circle_array[i].setRadius(temp);
+  }
+	
+	for(int i=0; i<5; i++){
+		cout << "Circle " << i << " width = " << circle_array[i].getWidth() << endl;
+	}
+	
+	delete[] circle_array;
+	
+}
+```
+
+<br/>
+
+__출력 결과__
+
+<br/>
+
+> Circle 0 width = 314 <br/>
+> Circle 1 width = 1256 <br/>
+> Circle 2 width = 2826 <br/>
+> Circle 3 width = 5024 <br/>
+> Circle 4 width = 7850 <br/>
+
+<br/>
 
