--- a/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
+++ b/2. 제네릭 프로그래밍/#2. 제너릭 포인터.md
@@ -392,6 +392,10 @@ __출력 결과__
 
 <br/>
 
+__동적 객체 포인터 선언__
+
+<br/>
+
 객체 포인터 역시 다른 포인터와 마찬가지로 new 연산자를 활용한 동적 선언이 가능하다.<br/>
 동적 연산을 사용하는 경우 별도의 포인터 변수 선언 없이도 구현이 가능하다.<br/>
 
