Update #3. 스마트 포인터.md

--- a/2. 제네릭 프로그래밍/#3. 스마트 포인터.md
+++ b/2. 제네릭 프로그래밍/#3. 스마트 포인터.md
@@ -223,3 +223,13 @@ __출력 결과__
 > 5 <br/>
 
 <br/>
+
+### Unique Pointer를 사용하는 이유
+
+<br/>
+
+- shared_ptr에 비해 용량이 작아 성능에 유리하다. <br/>
+- 지역 변수로 포인터 변수를 활용한다면, 함수종료시 unique_ptr이 가리키는 객체는 자동으로 소멸한다. <br/>
+- 한 변수만이 객체의 소유권을 가져야 하는 경우 unique_ptr을 사용하면 코드의 양을 줄일 수 있다. <br/>
+
+<br/>
