--- a/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
+++ b/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
@@ -63,3 +63,45 @@ int main() {
 > x = 5 <br/>
 > &x = 0x7fff88a05404 <br/>
 > *&x = 5 <br/>
+
+<br/>
+
+### 포인터 (Pointer)
+
+<br/>
+
+- 주소 값을 담는 변수 <br/>
+- __(입력한 주소에 있는)자료형' * ' 변수명__ 으로 선언한다.   <br/>
+
+<br/>
+
+```c++
+int main() {
+	int x = 5;
+	cout << "x = " << x << endl;
+	int* y = &x;
+	cout << "y = " << y << endl;
+	return 0;
+}
+```
+
+<br/>
+
+> x = 5 <br/>
+> &x = 0x7ffcfc222a94 <br/>
+> y = 0x7ffcfc222a94 <br/>
+> &y = 0x7ffc297ca90c <br/>
+
+<br/>
+
+int형 자료의 주소값을 담는 변수 y가 선언되었고, y를 출력하면 주소값이 나온다. <br/>
+
+<br/>
+
+이는 다음과 같은 구조로 정리된다. <br/>
+
+int x = 5 (실제 값) / &x = 0x7ffcfc222a94 (x의 주소 값) <br/>
+int* y = &x (int형 주소값을 갖는 y) / y = 0x7ffcfc222a94 (y 값 = x 주소 값) / &y = 0x7ffc297ca90c <br/>
+
+<br/>
+
