Update #6. 템플릿 파라미터.md

--- a/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
+++ b/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
@@ -100,8 +100,14 @@ int형 자료의 주소값을 담는 변수 y가 선언되었고, y를 출력하
 
 이는 다음과 같은 구조로 정리된다. <br/>
 
-int x = 5 (실제 값) / &x = 0x7ffcfc222a94 (x의 주소 값) <br/>
-int* y = &x (int형 주소값을 갖는 y) / y = 0x7ffcfc222a94 (y 값 = x 주소 값) / &y = 0x7ffc297ca90c <br/>
+> int x = 5 (실제 값) <br/>
+> &x = 0x7ffcfc222a94 (x의 주소 값) <br/>
+
+<br/>
+
+> int* y = &x (int형 주소값을 갖는 y) <br/>
+> y = 0x7ffcfc222a94 (y 값 = x 주소 값) <br/>
+> &y = 0x7ffc297ca90c (y 주소 값) <br/>
 
 <br/>
 
