Update #6. 템플릿 파라미터.md

--- a/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
+++ b/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
@@ -65,6 +65,7 @@ int main() {
 > *&x = 5 <br/>
 
 <br/>
+<br/>
 
 ### 포인터 (Pointer)
 
@@ -110,4 +111,95 @@ int형 자료의 주소값을 담는 변수 y가 선언되었고, y를 출력하
 > &y = 0x7ffc297ca90c (y 주소 값) <br/>
 
 <br/>
+
+포인터를 활용하여 실제 변수 값을 변경할 수 있다. <br/>
+
+<br/>
+
+```c++
+int main() {
+	int x = 5;
+	int *y = &x;
+	cout << "y = " << y << endl;
+	cout << "*y = " << *y << endl;
+	
+	*y = 7;
+	cout << "x = " << x << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+> y = 0x7ffeb588dbe4 <br/>
+> *y = 5 <br/>
+> x = 7 <br/>
+
+<br/>
+
+역참조 연산자를 활용하여 실제 변수를 변경할 수 있다. <br/>
+
+<br/>
+<br/>
+
+### 레퍼런스 (Reference)
+
+<br/>
+
+- 참조형 변수, 특정 변수를 참조하는 용도로 선언 된다. <br/>
+- __(참조하려는 변수의)자료형'&' 변수명__ 으로 선언한다.   <br/>
+
+<br/>
+
+```c++
+int main() {
+	int x = 5;
+	int& y = x;	// x를 참조하는 변수 y
+	int& y = 7;	// Complie Error (레퍼런스 변수에 리터럴 값을 지정할 수 없음)
+}
+```
+
+<br/>
+
+레퍼런스 변수(z)를 활용해 참조하는 변수(x)의 값을 변경할 수 있다. <br/>
+
+<br/>
+
+```c++
+int main() {
+	int x = 5;
+	int& z = x;
+	cout << "x = " << x << endl;
+	cout << "&x = " << &x << endl;
+	cout << "z = " << z << endl;
+	cout << "&z = " << &z << endl;
+	
+	z = 7;
+	cout << "After Change" << endl;
+	cout << "x = " << x << endl;
+	cout << "&x = " << &x << endl;
+	cout << "z = " << z << endl;
+	cout << "&z = " << &z << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+> x = 5 <br/>
+> &x = 0x7ffc555f39d4 <br/>
+> z = 5 <br/>
+> &z = 0x7ffc555f39d4 <br/>
+> After Change <br/>
+> x = 7 <br/>
+> &x = 0x7ffc555f39d4 <br/>
+> z = 7 <br/>
+> &z = 0x7ffc555f39d4 <br/>
+
+<br/>
+<br/>
+<br/>
+
 
