--- a/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
+++ b/2. 제네릭 프로그래밍/#6. 템플릿 파라미터.md
@@ -202,4 +202,208 @@ int main() {
 <br/>
 <br/>
 
+## 2) 템플릿 파라미터 추론
 
+<br/>
+<br/>
+
+### 템플릿 타입 사용
+
+<br/>
+
+- 제네릭 프로그래밍 : 데이터 형식에 의존하지 않고 하나의 값이 여러 다른 데이터 타입을 가질 수 있는 프로그래밍 기법 <br/>
+- 템플릿 타입 : 함수를 별도로 작성하지 않아도 여러 자료형으로 사용할 수 있게 만들어 놓은 함수 <br/>
+
+<br/>
+
+```c++
+template <typename T>
+T getmax(T a, T b){
+  if(a > b) return a;
+  else return b;
+}
+
+int main() { 
+
+  cout << getmax(10, 20) << endl;
+  cout << getmax(11.3, 25.5) << endl;
+
+  return 0;
+}
+```
+
+<br/>
+
+> 20 <br/>
+> 25.5 <br/>
+
+<br/>
+
+위 처럼 변수의 타입과 상관 없이 컴파일러에게 타입에 대한 추론을 맞기는 방법을 템플릿이라 한다. <br/>
+
+<br/>
+
+템플릿 함수를 좀 더 쉬운 구조로 나타내기 위해 다름과 같은 구조로 표현하자. <br/>
+
+```c++
+template <typename T>
+void foo(T parameter);
+
+foo(variable);
+```
+
+<br/>
+<br/>
+
+### 2-1) Parameter에 레퍼런스나 포인터를 사용하지 않는 경우
+
+<br/>
+
+```c++
+template <typename T>
+void foo(T parameter);
+
+foo(variable);
+```
+
+<br/>
+
+위와 같이 함수 파라미터에 포인터와 레퍼런스를 사용하지 않는 경우, 컴파일러는 다음의 규칙에 따라 타입을 추론한다. <br/>
+
+<br/>
+
+```c++
+int x = 23;		// x : int형
+const int cx = x;	// cx : const int형
+const int& rx = x;	// rx : const int형에 대한 레퍼런스
+
+foo(x);			// parameter Type : int
+foo(cx);		// parameter Type : int
+foo(rx);		// parameter Type : int
+```
+
+<br/>
+
+포인터, 레퍼런스가 사용되지 않은 파라미터는 다음과 같은 규칙이 사용된다. <br/>
+
+<br/>
+
+1. parameter 타입에 레퍼런스를 사용하면 레퍼런스는 무시 된다. <br/>
+2. parameter 타입에 상수를 사용하면 const도 무시 된다. <br/>
+3. parameter 타입은 템플릿 타입 (T)와 parameter의 변수 (int)를 매칭 시켜 타입을 추론한다. <br/>
+
+<br/>
+
+아래 예제를 통해 const와 레퍼런스가 무시되는지 살펴보자. 
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+int square(T r){
+	r = r + 1;
+	return r * r;
+}
+
+int main() {
+	int x = 10;
+	const int cx = x;
+	const int& rx = x;
+	
+	cout << "x paramerter " << square(x) << endl;
+	cout << "cx paramerter " << square(cx) << endl;
+	cout << "rx paramerter " << square(rx) << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+> x paramerter 121
+> cx paramerter 121
+> rx paramerter 121
+
+<br/>
+
+const 키워드가 무시되어 r 값이 변경 되어도 이상 없이 컴파일 된다.  <br/>
+
+<br/>
+
+```c++
+#include <iostream>
+using namespace std;
+
+template <typename T>
+int square(T r){
+	r = 11;
+	return r * r;
+}
+
+int main() {
+	int x = 10;
+	const int cx = x;
+	const int& rx = x;
+	
+	cout << "x paramerter " << square(x) << endl;
+	cout << "cx paramerter " << square(cx) << endl;
+	cout << "rx paramerter " << square(rx) << endl;
+	
+	return 0;
+}
+```
+
+<br/>
+
+> x paramerter 121
+> cx paramerter 121
+> rx paramerter 121
+
+<br/>
+
+reference 키워드가 무시되어 r 값에 새로운 리터럴 변수를 넣어도 이상 없이 컴파일 된다.  <br/>
+
+<br/>
+<br/>
+
+### 2-2) Parameter에 레퍼런스나 포인터를 사용하는 경우
+
+<br/>
+
+```c++
+template <typename T>
+void foo(T& parameter);
+
+foo(variable);
+```
+
+<br/>
+
+위와 같이 함수 파라미터에 레퍼런스를 사용한 경우, 컴파일러는 다음의 규칙에 따라 타입을 추론한다. <br/>
+
+<br/>
+
+```c++
+int x = 23;		// x : int형
+const int cx = x;	// cx : const int형
+const int& rx = x;	// rx : const int형에 대한 레퍼런스
+
+foo(x);			// T : int, parameter Type : int&
+foo(cx);		// T : const int, parameter Type : const int&
+foo(rx);		// T : const int, parameter Type : const int&
+```
+
+<br/>
+<br/>
+
+포인터, 레퍼런스가 사용된 파라미터는 다음과 같은 규칙이 사용된다. <br/>
+
+<br/>
+
+1. parameter 타입에 레퍼런스를 사용하면 레퍼런스는 무시 된다. <br/>
+2. parameter 타입에 상수를 사용하면 const도 무시 되지 않는다. <br/>
+3. parameter 타입은 템플릿 타입 (T)와 parameter의 변수 (int)를 매칭 시켜 타입을 추론한다. <br/>
+
+<br/>
+<br/>
