--- a/1. C++ 개요/9. 레퍼런스.md
+++ b/1. C++ 개요/9. 레퍼런스.md
@@ -187,13 +187,13 @@ int main() {
 
 <br/>
 
-> l-value
-> a : 11
-> r-value
-> value : 32
-> r-value
-> value : 4
-> a : 11
+> l-value <br/>
+> a : 11 <br/>
+> r-value <br/>
+> value : 32 <br/>
+> r-value <br/>
+> value : 4 <br/>
+> a : 11 <br/>
 
 <br/>
 
